<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_activity_view_score"
                    android:id="@+id/viewScoreBtn"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/menu_activity_help"
                    android:id="@+id/helpBtn" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/menu_activity_setting"
                    android:id="@+id/settingBtn"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_activity_play_game"
            android:id="@+id/playGameBtn"
            android:layout_marginTop="160dp"
            android:layout_marginBottom="160dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_activity_exit_game"
            android:layout_gravity="left"
            android:id="@+id/exitGameBtn" />

    </LinearLayout>


</LinearLayout>