<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal">


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/gameover_activity_game_over"
                android:id="@+id/textView2"
                android:gravity="center"
                android:textSize="24pt"

                android:layout_weight="0.04" />


        </LinearLayout>



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1">



            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gameover_activity_menu"
                android:id="@+id/menuBtn"
                android:layout_weight="1"
                android:layout_gravity="bottom" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gameover_activity_exit"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:id="@+id/exitBtn" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gameover_activity_play_again"
                android:id="@+id/playAgainBtn"
                android:layout_weight="1"
                android:layout_gravity="bottom" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>
