<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal">



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_activity_volume"
            android:id="@+id/button"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:onClick="clickVolume"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_activity_color"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:onClick="clickColor"
            android:id="@+id/button2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_activity_difficulty_mode"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:onClick="clickDifficultyMode"
            android:id="@+id/button3" />




    </LinearLayout>

</LinearLayout>